# ComponentsRelations

./: CMakeLists.txt
src/: Database.cpp  Database.h  Menu.cpp  Menu.h  Scene.cpp  Scene.h  Users.cpp  Users.h  main.cpp
src/Components/: Components.cpp  Components.hpp
src/Core/: ComponentArray.hpp  ComponentsManager.hpp  Coordinator.hpp  Definitions.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.hpp
src/Math/: Math.cpp  Math.h
